WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274471
[Navigation] Correct cancelable determination of NavigateEvent
https://bugs.webkit.org/show_bug.cgi?id=274471
Summary
[Navigation] Correct cancelable determination of NavigateEvent
Rob Buis
Reported
2024-05-21 08:30:57 PDT
Correct cancelable determination of NavigateEvent.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-05-21 08:35:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28855
EWS
Comment 2
2024-05-22 00:02:03 PDT
Committed
279109@main
(072b031414e5): <
https://commits.webkit.org/279109@main
> Reviewed commits have been landed. Closing PR #28855 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-22 00:03:15 PDT
<
rdar://problem/128522685
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug